# crush

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  build.js  build.rs  generate_docs.crush  ideas  ideas.md  package.json  some_file  todo  todo.md
docs/: config.md  definitions.md  hacking.md  misc.md  overview.md  syntax.md
example_data/: address.csv  age.csv  dinosaurs.json  donald.json  home.csv  numbers.json  text.txt
ordered_map/: Cargo.toml
ordered_map/src/: lib.rs
signature/: Cargo.toml
signature/src/: lib.rs  signature.rs  simple_signature.rs
src/: base_lexer.rs  cell.rs  closure.rs  commands.rs  crush.proto  env.rs  errors.rs  format.rs  generic_lexer.rs  glob.rs  job.rs  lexer.rs  main.rs  namepspace.rs  namespace.rs  namespace_node.rs  parser.rs  printer.rs  result.rs  scope.rs  state.rs  stream.rs  stream_printer.rs  thread_util.rs
src/builtins/: binary_op.rs  comp.rs  cond.rs  crush.rs  dbus.rs  dns.rs  groups.rs  grpc.rs  host.rs  math.rs  mod.rs  random.rs  remote.rs  systemd.rs  term.rs  user.rs  users.rs  var.rs
src/builtins/control/: cmd.rs  for.rs  help.rs  if.rs  loop.rs  mod.rs  schedule.rs  timeit.rs  timer.rs  while.rs
src/builtins/fs/: fd.rs  files.rs  mod.rs  mounts.rs  usage.rs
src/builtins/io/: base64.rs  bin.rs  csv.rs  hex.rs  http.rs  json.rs  lines.rs  mod.rs  pup.rs  split.rs  toml.rs  words.rs  yaml.rs
src/builtins/stream/: aggregation.rs  count.rs  drop.rs  each.rs  enumerate.rs  group.rs  head.rs  join.rs  mod.rs  reverse.rs  select.rs  seq.rs  skip.rs  sort.rs  tail.rs  uniq.rs  where.rs  zip.rs
src/builtins/types/: binary.rs  dict.rs  duration.rs  file.rs  float.rs  glob.rs  integer.rs  list.rs  mod.rs  one_of.rs  re.rs  scope.rs  struct.rs  table.rs  table_input_stream.rs  table_output_stream.rs  time.rs
src/closure/: mod.rs
src/commands/: aggr.rs  cast.rs  cat.rs  cd.rs  command_util.rs  comp.rs  count.rs  csv.rs  dict.rs  echo.rs  enumerate.rs  env.rs  field.rs  filter.rs  find.rs  for.rs  forr.rs  group.rs  head.rs  http.rs  if.rs  join.rs  json.rs  let.rs  let_command.rs  lett.rs  lines.rs  list.rs  list_len.rs  ls.rs  ls_and_find.rs  math.rs  mod.rs  parse_util.rs  ps.rs  pwd.rs  reverse.rs  select.rs  set.rs  smath.rs  (+13 more)
src/commands/filter/: mod.rs  parser.rs
src/commands/where/: mod.rs  parser.rs
src/crushlib/: lls.crush
src/data/: argument.rs  binary.rs  call_definition.rs  cell.rs  cell_definition.rs  cell_type.rs  cell_type_lexer.rs  cell_type_parser.rs  column_type.rs  command.rs  dict.rs  list.rs  list_definition.rs  mod.rs  row.rs  rows.rs  stream.rs  value.rs  value_definition.rs  value_type.rs  value_type_parser.rs
src/l/: ll.crush
src/lang/: any_str.rs  argument.rs  ast.rs  binary.rs  call_definition.rs  closure.rs  column_type.rs  command.rs  command_invocation.rs  dict.rs  errors.rs  execute.rs  execution_context.rs  files.rs  global_state.rs  help.rs  interactive.rs  job.rs  lalrparser.lalrpop  lexer.rs  list.rs  mod.rs  number.rs  ordered_map.rs  ordered_string_map.rs  parser.rs  patterns.rs  pipe.rs  pretty.rs  pretty_printer.rs  printer.rs  row.rs  rows.rs  scope.rs  serialize.rs  stream.rs  stream_printer.rs  struct.rs  table.rs  threads.rs  (+7 more)
src/lang/ast/: lexer.rs  location.rs  mod.rs  node.rs  parameter_node.rs  source.rs  token.rs  tracked_string.rs
src/lang/command/: closure.rs  mod.rs
src/lang/completion/: mod.rs  parse.rs
src/lang/data/: binary.rs  dict.rs  list.rs  mod.rs  scope.rs  struct.rs  table.rs
src/lang/interactive/: mod.rs  rustyline_helper.rs
src/lang/serialization/: dict_serializer.rs  integer_serializer.rs  list_serializer.rs  mod.rs  scope_serializer.rs  string_serializer.rs  struct_serializer.rs  table_serializer.rs  tracked_string_serializer.rs  value_serializer.rs  value_type_serializer.rs
src/lang/signature/: binary_input.rs  files.rs  mod.rs  patterns.rs  text.rs
src/lang/state/: argument_vector.rs  contexts.rs  global_state.rs  mod.rs  scope.rs  this.rs
src/lang/value/: mod.rs  value_definition.rs  value_type.rs  vec_reader.rs
src/lib/: battery.rs  binary_op.rs  cd.rs  command_util.rs  comp.rs  cond.rs  constants.rs  crush.rs  csv.rs  dbus.rs  declare.rs  dict.rs  dns.rs  env.rs  fd.rs  find.rs  for.rs  group.rs  grpc.rs  head.rs  host.rs  join.rs  json.rs  let.rs  lines.rs  list.rs  materialize.rs  math.rs  mod.rs  parse_util.rs  proc.rs  ps.rs  pup.rs  random.rs  remote.rs  reverse.rs  select.rs  sort.rs  stat.rs  sum.rs  (+10 more)
src/scope/: data.rs  mod.rs
src/util/: byte_unit.rs  directory_lister.rs  display_non_recursive.rs  escape.rs  file.rs  glob.rs  hash_non_recursive.rs  hex.rs  highlight.rs  identity_arc.rs  integer_formater.rs  logins.rs  md.rs  mod.rs  regex.rs  replace.rs  repr.rs  temperature.rs  thread.rs  time.rs  user_map.rs
test_finder/: Cargo.toml
test_finder/src/: lib.rs
tests/: chmod.crush  chmod.crush.output  class.crush  closure_signatures.crush  closure_signatures.crush.output  comparisons.crush  comparisons.crush.output  convert.crush  convert.crush.output  exit.crush  find.crush  find.crush.output  for.crush  for.crush.output  group.crush  group.crush.output  integer.crush  integer.crush.output  join.crush  join.crush.output  json.crush  json.crush.output  large_filter.crush  large_filter.crush.output  loop.crush  pipe.crush  pipe.crush.output  pipe2.crush  pipe2.crush.output  pipe3.crush  pipe3.crush.output  serialization.crush  serialization.crush.output  string.crush  string.crush.output  system.rs  time.crush  time.crush.output  whitespace.crush  whitespace.crush.output  (+2 more)
(+102 files in other folders)
