[package]
name = "crush"
version = "0.1.0"
authors = ["Axel Liljencrantz <liljencrantz@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
description = "A command line shell that is also a powerful and modern programming language"
readme = "README.md"
repository = "https://github.com/liljencrantz/crush"
rust-version = "1.85.0"

[build-dependencies.prost-build]
version = "0.12.6"

[build-dependencies.lalrpop]
version = "0.20.2"
features = ["lexer"]

[workspace]
members = [
    "signature",
    "test_finder",
    "ordered_map",
]

[dependencies.test_finder]
path = "test_finder"

[dependencies.signature]
path = "signature"

[dependencies.ordered_map]
path = "ordered_map"

[dependencies]
lalrpop-util = { version = "0.22.1", features = [ "lexer"] }
chrono = "0.4.41"
regex = "1.11.1"
rustyline = { version = "15.0.0", features = ["with-file-history"] }
rustyline-derive = "0.11.0"
dirs = "6.0.0"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = { version = "0.9.34" }
toml = "0.8.22"
reqwest = { version = "0.12.15", features = ["blocking"] }
crossbeam = "0.8.4"
time = "0.3.41"
prost = "0.13.5"
bytes = "1.10.1"
termion = "4.0.5"
float-ord = "0.3.2"
maplit = "1.0.2"
ssh2 = "0.9.5"
rand = "0.9.1"
sys-info = "0.9.1"
battery = "0.7.8"
nix = { version = "0.30.1", features = ["process", "user", "signal", "fs"] }
dns-lookup = "2.0.4"
sysinfo = "0.35.1"
psutil = "3.3.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
unicode-width = "0.2.0"
os_pipe = "1.2.1"
uptime_lib = "0.3.1"
trust-dns-client = "0.23.2"
resolv-conf = "0.7.3"
itertools = "0.14.0"
mountpoints = "0.2.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.8.4"
roxmltree = "0.13.0"
systemd = "0.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.10.0"
mach2 = "0.4.1"
